app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

.container{
  display: flex;
  overflow:auto;
  scroll-snap-type: x mandatory;
  scroll-snap-align: start;
  white-space: nowrap;
  max-height: 100vh;
  width: 100vw;
  height: 100%;
  min-width: 100vw;
  /* height: 100vh; */
}

.container::-webkit-scrollbar{
  display: none;
}

.page{
  flex: 0 0 auto;
  width: 100%;
  /* min-height: 100vh; */
  height: 100%;
  max-height: 100vh;
  overflow-y: hidden;
  text-overflow: clip;
  box-sizing: border-box;
  scroll-snap-align: start;
  /* border: 1px solid #ccc; */
  /* padding: 20px; */
}

.title{
  letter-spacing: 0.7em;
  text-transform: uppercase;
  font-size: 9px;
  color: white;
}

body {
  /* color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb)); */
    background-color: black;
    overflow: hidden;
    color: white;
}

/* For WebKit/Blink browsers (Chrome, Safari) */
body::-webkit-scrollbar {
  width: 0;
  height: 0;
}

:root {
  --font-family: "Jost";
  --font-heading: 'Futura Condensed';
  --font-typewriter: 'Courier Prime';
   --color-primary: black;
   --color-white-light: #ffffff94;

  --letter-spacing-xs: 0.05em;
  --letter-spacing-sm: 0.2em;
  --letter-spacing-md: 0.3em;
  --letter-spacing-lg: 0.5em;
  --letter-spacing-xl: 0.8em;
}

